@@ -21,13 +21,23 @@ See the Apache License Version 2.0 for the specific language governing permissio
 	<packaging>pom</packaging>
 
 	<properties>
-		<tycho-version>1.3.0</tycho-version>
-		<xtextVersion>2.15.0</xtextVersion>
+		<xtextVersion>2.23.0</xtextVersion>
+		<mwe2Version>2.11.3</mwe2Version>
+		<org.eclipse.emf.codegen.ecore.xtext-version>1.5.0</org.eclipse.emf.codegen.ecore.xtext-version>
+		<org.eclipse.emf.ecore.xcore.lib-version>1.5.0</org.eclipse.emf.ecore.xcore.lib-version>
+		<org.eclipse.emf.ecore.xcore-version>1.16.0</org.eclipse.emf.ecore.xcore-version>
+		<org.eclipse.emf.ecore-version>2.23.0</org.eclipse.emf.ecore-version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+		<!-- Tycho settings -->
+		<tycho-version>2.2.0</tycho-version>
+		<!-- Define overridable properties for tycho-surefire-plugin IMPORTANT THESE PROPERTIES ARE SOMETIMES OVERRIDEN BUT NEED TO BE BLANK OTHERWISE -->
+		<platformSystemProperties></platformSystemProperties>
+		<moduleProperties></moduleProperties>
+		<systemProperties></systemProperties>
+		<additionalTestArguments></additionalTestArguments>
 	</properties>
-
 	<modules>
 		<module>com.regnosys.rosetta</module>
 		<module>com.regnosys.rosetta.target</module>
@@ -38,7 +48,27 @@ See the Apache License Version 2.0 for the specific language governing permissio
 		<module>com.regnosys.rosetta.lib</module>
 		<module>com.regnosys.rosetta.blueprint-lib</module>
 	</modules>
-
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.eclipse.xtext</groupId>
+				<artifactId>xtext-dev-bom</artifactId>
+				<version>2.24.0</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.emf</groupId>
+				<artifactId>org.eclipse.emf.mwe2.runtime</artifactId>
+				<version>2.12.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.antlr</groupId>
+				<artifactId>antlr-runtime</artifactId>
+				<version>3.2</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<build>
 		<plugins>
 			<plugin>
@@ -117,6 +147,23 @@ See the Apache License Version 2.0 for the specific language governing permissio
 							<arch>x86_64</arch>
 						</environment>
 					</environments>
+					<dependency-resolution>
+						<extraRequirements>
+							<requirement>
+								<type>eclipse-plugin</type>
+								<id>org.eclipse.xtext.logging</id>
+								<versionRange>1.2.15</versionRange>
+							</requirement>
+							<!-- to get the org.eclipse.osgi.compatibility.state plugin if the target 
+								platform is Luna or later. (backward compatible with kepler and previous 
+								versions) see https://bugs.eclipse.org/bugs/show_bug.cgi?id=492149 -->
+							<requirement>
+								<type>eclipse-feature</type>
+								<id>org.eclipse.rcp</id>
+								<versionRange>0.0.0</versionRange>
+							</requirement>
+						</extraRequirements>
+					</dependency-resolution>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -131,7 +178,9 @@ See the Apache License Version 2.0 for the specific language governing permissio
 						<execution>
 							<goals>
 								<goal>compile</goal>
+								<goal>xtend-install-debug-info</goal>
 								<goal>testCompile</goal>
+								<goal>xtend-test-install-debug-info</goal>
 							</goals>
 						</execution>
 					</executions>
@@ -143,7 +192,7 @@ See the Apache License Version 2.0 for the specific language governing permissio
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-clean-plugin</artifactId>
-					<version>2.5</version>
+					<version>3.1.0</version>
 					<configuration>
 						<filesets>
 							<fileset>
@@ -171,7 +220,7 @@ See the Apache License Version 2.0 for the specific language governing permissio
 											maven-resources-plugin
 										</artifactId>
 										<versionRange>
-											[2.4.3,)
+											2.4.3
 										</versionRange>
 										<goals>
 											<goal>resources</goal>
@@ -191,7 +240,7 @@ See the Apache License Version 2.0 for the specific language governing permissio
 											build-helper-maven-plugin
 										</artifactId>
 										<versionRange>
-											[1.9.1,)
+											1.9.1
 										</versionRange>
 										<goals>
 											<goal>add-resource</goal>
@@ -213,7 +262,7 @@ See the Apache License Version 2.0 for the specific language governing permissio
 											tycho-compiler-plugin
 										</artifactId>
 										<versionRange>
-											[0.23.1,)
+											0.23.1
 										</versionRange>
 										<goals>
 											<goal>compile</goal>
@@ -232,7 +281,7 @@ See the Apache License Version 2.0 for the specific language governing permissio
 											tycho-packaging-plugin
 										</artifactId>
 										<versionRange>
-											[0.23.1,)
+											0.23.1
 										</versionRange>
 										<goals>
 											<goal>build-qualifier</goal>
@@ -250,18 +299,38 @@ See the Apache License Version 2.0 for the specific language governing permissio
 					</configuration>
 				</plugin>
 				<plugin>
-					<!-- Can be removed after first generator execution https://bugs.eclipse.org/bugs/show_bug.cgi?id=480097 -->
+					<!-- 
+						Can be removed after first generator execution
+						https://bugs.eclipse.org/bugs/show_bug.cgi?id=480097
+					-->
 					<groupId>org.eclipse.tycho</groupId>
 					<artifactId>tycho-compiler-plugin</artifactId>
 					<version>${tycho-version}</version>
 					<configuration>
 						<compilerArgument>-err:-forbidden</compilerArgument>
+						<useProjectSettings>false</useProjectSettings>
+						<compilerVersion>11</compilerVersion>
  					</configuration>
 				</plugin>
+				<!-- to skip running (and compiling) tests use commandline flag: -Dmaven.test.skip
+					To skip tests, but still compile them, use: -DskipTests
+					To allow all tests in a pom to pass/fail, use commandline flag: -fae (fail
+					at end) -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.22.0</version>
+					<version>2.22.2</version>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-surefire-plugin</artifactId>
+					<version>${tycho-version}</version>
+					<configuration>
+						<!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
+						<argLine>${platformSystemProperties} ${systemProperties} ${moduleProperties} ${additionalTestArguments}</argLine>
+						<failIfNoTests>false</failIfNoTests>
+						<useUIHarness>false</useUIHarness>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -292,4 +361,30 @@ See the Apache License Version 2.0 for the specific language governing permissio
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>	
+	<profiles>
+		<profile>
+			<id>macos</id>
+			<activation>
+				<os>
+					<family>mac</family>
+				</os>
+			</activation>
+			<properties>
+				<!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
+				<platformSystemProperties>-XstartOnFirstThread</platformSystemProperties>
+			</properties>
+		</profile>
+		<profile>
+			<id>jdk9-or-newer</id>
+			<activation>
+				<jdk>9</jdk>
+			</activation>
+			<properties>
+				<moduleProperties>--add-modules=ALL-SYSTEM</moduleProperties>
+			</properties>
+		</profile>
+	</profiles>
+
+	<dependencies>
+	</dependencies>
 </project>
